src/test/ui/parser/doc-before-fn-rbrace.rs
fn main() {
    /// document
    //~^ ERROR found a documentation comment that doesn't document anything
    //~| HELP maybe a comment was intended
}
